Squashed 'bundle/tcomment_vim/' changes from c3d82bf..3ab8c46
3ab8c46 FIX #135: Old map in help docs
4392ddc docs
ffa4a3f version
eefd9ee FIX #134: s:Printf1() fix regexp

git-subtree-dir: bundle/tcomment_vim
git-subtree-split: 3ab8c46c5c0e78b2ee365fe7a4df7316280ca220

--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -440,3 +440,9 @@ version: "3.05"
   MD5 checksum: a63f84ff30a8d9e5dfa7f43b800c05bf
 version: "3.05"
 
+version: "3.06"
+  - Define toml type
+  - Merge pull request #133 from moorereason/toml
+  - FIX #134: s:Printf1() fix regexp
+  MD5 checksum: 279fcee28dcde33c347fa2ffa48da054
+
