Squashed 'bundle/tcomment_vim/' changes from 3ab8c46..7f2adfe
7f2adfe docs
232e83b s:MapOp: Remove count argument
eee4ff4 FIX #140: s:MapOp(): Don't evaluate registers to define op functions
4bc4d53 FIX #138: Support for jinja filetype (see https://github.com/Glench/Vim-Jinja2-Syntax)
6972b5b FIX #137: Prefer // for rust comments
71dbf7e docs
097b0af version
25f6584 docs
52a9572 FIX #136: Uncomment omaps must not call *Anyway; fix handling of U in s:GuessCommentMode()

git-subtree-dir: bundle/tcomment_vim
git-subtree-split: 7f2adfeb702210cae8e8aa8471bfb2b777d2c3b3

--- a/CHANGES.TXT
+++ b/CHANGES.TXT
@@ -446,3 +446,8 @@ version: "3.06"
   - FIX #134: s:Printf1() fix regexp
   MD5 checksum: 279fcee28dcde33c347fa2ffa48da054
 
+  - FIX #135: Old map in help docs
+  - FIX #136: Uncomment omaps must not call *Anyway; fix handling of U in s:GuessCommentMode()
+  MD5 checksum: 1c9d1e9f1de51c7ddcd049839eb686aa
+version: "3.07"
+
