Squashed 'bundle/previm/' changes from d36c96a..b5dba08
b5dba08 Merge pull request #60 from kashewnuts/develop
dd1c167 fix indent
dca191f Merge pull request #55 from lv7777/master
0e1912e Remove opacity of .section because it cannot see in rst file.
553bbed Merge pull request #53 from ryym/fix-image-path-regexp
99e1cc0 Merge pull request #52 from mattn/windows
919a3dc modified above commit indent on previm.vim
bf62ddc fix #45, open on firefox by windows environment.
70620ad get image path inside of link correctly
5ad937a Normalize path on windows
228bc8a Merge pull request #49 from kannokanno/46-support-latest-open-browser
6b278c8 Merge pull request #48 from achiku/update_mermaid
27b4523 update mermaid version to 0.5.7
9449625 ref #46 support latest open-browser.vim
b130f24 Merge pull request #40 from ryym/fix-code-block-rendering
a392223 use the default function for code block rendering
85a0979 Merge pull request #39 from kannokanno/hidden-header
11acd54 add setting of hidden header
1ffaaf4 Merge pull request #38 from kannokanno/support-mermaid
2eb6367 fix pageYOffset for autoscroll
c55e4b7 support mermaid.js
68458bc remove TODO
5cefe4f Merge pull request #37 from kannokanno/32-fix-image-with-title
e10a876 [#32] support img with title
a4920e6 [#32] rename property. title -> alt
074d3da add test for #34
ef72f33 fix assert args order
c3f6055 fix test args order

git-subtree-dir: bundle/previm
git-subtree-split: b5dba0837b464063284a8a97e7b9e5e378db545c

--- a/README.mkd
+++ b/README.mkd
@@ -9,6 +9,7 @@
 ## 対応フォーマット
 
 * Markdown
+    * support [mermaid](http://knsv.github.io/mermaid/index.html)
 * reStructuredText
 * textile
 
@@ -48,3 +49,19 @@ reStructuredTextの場合は`rst2html.py`が必要です。
 1. `:PrevimOpen` を実行してブラウザを開きます
 1. 元のVimバッファに戻り編集を続けます
 1. 変更の度にブラウザの表示内容が更新されます
+
+### mermaid
+
+[mermaid](http://knsv.github.io/mermaid/index.html)に対応しています。
+
+<pre>
+```mermaid
+graph TD;
+    A-->B;
+    A-->C;
+    B-->D;
+    C-->E;
+```
+</pre>
+
+![previm](https://raw.github.com/wiki/kannokanno/previm/images/previm-example-mermaid.png)
